# ai-diven-book

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  RUNNING.md  test_api.py  test_chatbot_functionality.py
.claude/commands/: sp.run.md
.github/workflows/: deploy.yml  gh-pages.yml  static.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .flake8  pyproject.toml  requirements-light.txt  requirements.txt
backend/backend/src/core/: embeddings_minimal.py
backend/backend/venv-test/: pyvenv.cfg
backend/src/api/: dependencies.py  main.py
backend/src/api/routes/: health.py  ingest.py  query.py
backend/src/core/: config.py  database.py  embeddings.py
backend/src/models/: __init__.py  chat_models.py  content_models.py  user_models.py
backend/src/services/: chat_service.py  ingestion_service.py  metrics_service.py  rag_service.py  retrieval_service.py  session_service.py
backend/src/utils/: text_processor.py  validators.py
backend/tests/: conftest.py
backend/tests/integration/: test_query_endpoint.py
backend/tests/unit/: test_ingestion_service.py  test_retrieval_service.py
backend/venv-light/: pyvenv.cfg
docs/: audit-tool-documentation.md
frontend/: .eslintrc.js  package-lock.json  package.json
my-website/: docusaurus.config.ts  eslint.config.js  minimal.config.ts  package.json
scripts/: README.md
scripts/audit/: ai-applications.js  build-validation.js  citation-check.js  comprehensive-audit.js  content-structure-validation.js  link-validation.js  (+6 more)
(+58 files in other folders)
